--- a/src/app/secont/transparency/expenses-by-origin/expenses-by-origin.component.html
+++ b/src/app/secont/transparency/expenses-by-origin/expenses-by-origin.component.html
@@ -19,7 +19,7 @@
 	<ion-content class="expenses">
 		<money-flow-report money-flow="vm.moneyFlow" 
 				on-item-click="vm.openDetails('app.secontTransparencyExpenseDetail', item)"
-				title="vm.filter.description()"
+				title="vm.reportTitle"
 				show-chart="vm.showChart" 
 				show-info="vm.showInfo">
 		</money-flow-report>
