--- a/src/app/secont/transparency/budgets/budgets.component.html
+++ b/src/app/secont/transparency/budgets/budgets.component.html
@@ -18,7 +18,7 @@
 	<spinner ng-if="uiState.loading"></spinner>
 	<ion-content>
 		<money-flow-report money-flow="vm.moneyFlow"
-				title="vm.filter.description()" 
+				title="vm.reportTitle" 
 				show-chart="vm.showChart" 
 				show-info="vm.showInfo"></money-flow-report>
 		<modal show="vm.showFilter" title="Orçamento">
