fix(transparency): Corrige link externo

--- a/src/app/secont/transparency/about/about.component.html
+++ b/src/app/secont/transparency/about/about.component.html
@@ -25,7 +25,7 @@
                     das ações de governo. Este aplicativo traz de forma mais resumida algumas consultas presentes no Portal
                     da Transparência.
                 </p> 
-                <p>Para informações mais detalhadas acesse  <a href="www.transparencia.es.gov.br">www.transparencia.es.gov.br</a>.</p>
+                <p>Para informações mais detalhadas acesse <a ng-click="vm.openLink( 'http://www.transparencia.es.gov.br/');" href="#">www.transparencia.es.gov.br</a>.</p>
             </md-card-content>
         </md-card>
 
