--- a/src/app/layout/menu/menu.component.scss
+++ b/src/app/layout/menu/menu.component.scss
@@ -1,20 +1,20 @@
-#main-side-bar md-list h2 {
+#menu-left-content h2 {
 	background-color: transparent !important;
 }
 
-#main-side-bar md-list h2 div.md-subheader-inner {
+#menu-left-content h2 div.md-subheader-inner {
 	background-color: transparent !important;
 }
 
-#main-side-bar md-list md-list-item.menu-list-item {
+#menu-left-content md-list-item.menu-list-item {
 	width: 100%;
 }
 
-#main-side-bar span.not-authenticated {
+#menu-left-content span.not-authenticated {
 	color: #a0a0a0
 }
 
-#main-side-bar md-list md-list-item.menu-list-item i {
+#menu-left-content md-list-item.menu-list-item i {
 	margin-right: 30px;
 	margin-left: 22px;
 	font-size: 19px;
@@ -22,27 +22,27 @@
 	width: 20px;
 }
 
-#main-side-bar md-list md-list-item.menu-list-item span {
+#menu-left-content md-list-item.menu-list-item span {
 	font-size: 15px;
 }
 
-#main-side-bar .menu-list .menu-item {
+#menu-left-content .menu-list .menu-item {
 	padding: 14px;
 }
 
-#main-side-bar .menu-list .menu-item .col-25 {
+#menu-left-content .menu-list .menu-item .col-25 {
 	text-align: center;
 	font-size: 22px;
 	color: #808080;
 }
 
-#main-side-bar .menu-list .menu-item .col-75 {
+#menu-left-content .menu-list .menu-item .col-75 {
 	font-size: 15px;
 	white-space: nowrap;
 	overflow-x: hidden;
 	text-overflow: ellipsis;
 }
 
-#main-side-bar .md-list-item-inner > span {
+#menu-left-content .md-list-item-inner > span {
 	width: 100%;
 }
