refactor(transcol-online): renomeia componente

--- a/src/app/ceturb/transcol-online/transcol-online.component.html
+++ b/src/app/ceturb/transcol-online/transcol-online.component.html
@@ -1,6 +1,6 @@
 <ion-view>
     <ion-nav-title>Transcol Online </ion-nav-title>
-    <div class="bus-stops">
+    <div class="transcol-online">
         <div class="stop-info" ng-class="{'stop-info--open': vm.showOriginInfo, 'stop-info--expanded': vm.showOriginDetails }">
 
             <div class="stop-info__header">
