--- a/src/app/ceturb/transcol-online/transcol-online.component.scss
+++ b/src/app/ceturb/transcol-online/transcol-online.component.scss
@@ -1,5 +1,5 @@
 /********************** Map **********************/
-.bus-stops {
+.transcol-online {
 	
 	#map{
 		height: 100vh;
@@ -135,7 +135,7 @@
 		color: #fff !important;
 	}
 
-	// .bus-stops .gps_ring {	
+	// .transcol-online .gps_ring {	
 	//     border: 3px solid darkred;
 	//     -webkit-border-radius: 30px;
 	//     height: 33px;
