--- a/src/app/sep/sep-consulta.component.scss
+++ b/src/app/sep/sep-consulta.component.scss
@@ -22,6 +22,16 @@
     padding: 10px 0;
 }
 
+#state-sep-consulta .process-number {
+    float: left;
+}
+
+#state-sep-consulta .favorite-button {
+    float: right;
+    font-size: 25px;
+}
+
+
 #btn-clear {
     right: 30px;
     left: auto;
@@ -42,6 +52,45 @@
     transition: all 0.2s;
     background: none;
     background-color: rgb(250,250,250);
+    flex-direction: column;
+}
+
+.title-following-process {
+    padding: 10px 10px 10px 5px;
+}
+
+.favorite-process-container {
+    background-color: white;
+    /*border: 2px solid #208baa;
+    border-radius: 5px;*/
+    margin-top: 4px;
+    box-shadow: 0 3px 8px 0 rgba( 0, 0, 0, 0.2 );
+
+    max-height: 265px;
+    overflow-y: scroll;
+    width: 96%;
+    margin: auto;
+    position: absolute;
+    top: 5px;
+    left: 2%;
+
+    overflow-x: hidden;
+}
+
+/* The starting CSS styles for the enter animation */
+.favorite-process-container.ng-enter {
+  transition:0.3s linear all;
+  opacity:0;
+}
+
+/* The finishing CSS styles for the enter animation */
+.favorite-process-container.ng-enter.ng-enter-active {
+  opacity:1;
+}
+
+.item-favorite-inner {
+    height: 35px;
+    padding: 9px;
 }
 
 .state-sep-subheader.fix-top {
