--- a/src/app/sep/sep-consulta.component.scss
+++ b/src/app/sep/sep-consulta.component.scss
@@ -56,7 +56,8 @@
 }
 
 .title-following-process {
-    padding: 10px 10px 10px 5px;
+    padding: 12px 9px;
+    background-color: #f7f7f7;
 }
 
 .favorite-process-container {
