--- a/src/app/sep/sep-consulta.component.scss
+++ b/src/app/sep/sep-consulta.component.scss
@@ -31,6 +31,9 @@
     font-size: 25px;
 }
 
+#state-sep-consulta.no-scroll > .scroll {
+    overflow-y: hidden;
+}
 
 #btn-clear {
     right: 30px;
@@ -62,20 +65,17 @@
 
 .favorite-process-container {
     background-color: white;
-    /*border: 2px solid #208baa;
-    border-radius: 5px;*/
     margin-top: 4px;
     box-shadow: 0 3px 8px 0 rgba( 0, 0, 0, 0.2 );
-
-    max-height: 265px;
+    height: 78%;
+    max-height: 205px;
     overflow-y: scroll;
+    overflow-x: hidden;
     width: 96%;
     margin: auto;
     position: absolute;
     top: 5px;
     left: 2%;
-
-    overflow-x: hidden;
 }
 
 /* The starting CSS styles for the enter animation */
