--- a/src/app/ceturb/transcol-online/prevision-list/prevision-list.component.html
+++ b/src/app/ceturb/transcol-online/prevision-list/prevision-list.component.html
@@ -1,7 +1,10 @@
 <md-list class="prevision-list">
-    <md-subheader class="md-no-sticky"> <i class="fa fa-clock-o"></i> Previsões ({{$ctrl.previsions.length}} linhas):</md-subheader>
+    <md-subheader class="md-no-sticky"> 
+        <i class="fa fa-clock-o"></i> {{$ctrl.title}}
+        <i class="pull-right fa fa-refresh" ng-class="{'fa-spin': $ctrl.loading}" ng-click="$ctrl.onRefreshClick()"></i>
+    </md-subheader>
     <ion-content style="top:56px;">
-        <md-list-item class="md-2-line" collection-repeat="prevision in $ctrl.previsions" item-height="70">
+        <md-list-item class="md-2-line" collection-repeat="prevision in $ctrl.previsions" item-height="70" md-no-ink ng-click="$ctrl.onPrevisionClick({ prevision: prevision })">
             <div class="md-list-item-text">
                 <h4 class="text-padding prevision-list__main"><strong>{{ prevision.identificadorLinha }}</strong> - {{ prevision.bandeira }} 
                     <i class="prevision-list__time"> {{ prevision.previsao }}</i>
