--- a/src/app/ceturb/transcol-online/transcol-online.component.scss
+++ b/src/app/ceturb/transcol-online/transcol-online.component.scss
@@ -172,7 +172,7 @@
 	}
 
 	.stop-info--expanded {
-		transform: translate3d(0, $bottomSheetHeight * 0.80, 0)
+		transform: translate3d(0, calc( 100vh - 100px), 0)
 	}
 	.stop-info--full-expanded {
 		transform: translate3d(0, $bottomSheetHeight * 0.20, 0)
@@ -187,12 +187,36 @@
 	}
 	
 	.stop-info__content {
-		flex-direction: column;
+		flex-direction: row;
 		flex: 1;
 		margin-top: 20px;
+		-webkit-transition: all 300ms cubic-bezier(0.420, 0.000, 0.000, 0.990); 
+		-moz-transition: all 300ms cubic-bezier(0.420, 0.000, 0.000, 0.990); 
+		-o-transition: all 300ms cubic-bezier(0.420, 0.000, 0.000, 0.990); 
+		transition: all 300ms cubic-bezier(0.420, 0.000, 0.000, 0.990); /* custom */
+		width: calc(100vw * 3);
 	}
+
+	.stop-info__content.destines{
+		transform: translate3d(0, 0, 0)
+	}
+
+	.stop-info__content.previsionsByOrigin{
+		transform: translate3d(-100vw, 0, 0)
+	}
+
+	.stop-info__content.previsionsByLine{
+		transform: translate3d(-200vw, 0, 0)
+	}
+
 	.stop-info__content > * {
-		flex: 1;
+		width: calc( 100vw - 20px);
+		margin-right: 20px;
+	}
+
+	.stop-info__content > * md-list {
+		position: relative;
+		height: 65vh;
 	}
 
 	.stop-info__icon {
@@ -227,15 +251,17 @@
 		background-color: #003e50 !important;
 	}
 	.stop-info__btn-favorite{
-		right: 0%;
+		// right: 0%;
 	}
 
 	.stop-info__btn-routes{
-		right: 14%;
+		// right: 14%;
+		right: 0;
 	}
 
 	.stop-info__btn-destiny{
-		right: 28%;
+		 // right: 28%;
+		 right: 14%
 	}
 
 	.leaflet-control-attribution { display: none;}
