feat(transcol-online): adiciona seleção de origem/destino e pesquisa textual (WIP)

--- a/src/app/ceturb/transcol-online/destiny-list/destiny-list.component.html
+++ b/src/app/ceturb/transcol-online/destiny-list/destiny-list.component.html
@@ -1,11 +1,11 @@
 <md-list class="destiny-list">
-    <md-subheader class="md-no-sticky"><i class="fa fa-code-fork"></i> Selecionar Destino ({{$ctrl.destines.length}} destinos):</md-subheader>
+    <md-subheader class="md-no-sticky"><i class="fa fa-code-fork"></i> Selecionar Destino ({{$ctrl.destinations.length}} destinos):</md-subheader>
     <ion-content style="top:56px;">
-        <md-list-item class="md-2-line" collection-repeat="destine in $ctrl.destines" item-height="70">
+        <md-list-item class="md-2-line" collection-repeat="destiny in $ctrl.destinations" item-height="70" md-no-ink ng-click="$ctrl.onDestinyClick({ destiny: destiny })">
             <div class="md-list-item-text">
-                <h4 class="text-padding"><strong>{{ destine.identificador}}</strong> - {{ destine.logradouro}}
+                <h4 class="text-padding"><strong>{{ destiny.identificador}}</strong> - {{ destiny.logradouro}}
                 </h4>
-                <div class="destiny-list__reference">{{ destine.bairro}} - {{ destine.municipio}}</div>
+                <div class="destiny-list__reference">{{ destiny.bairro}} - {{ destiny.municipio}}</div>
             </div>
             <md-divider></md-divider>
         </md-list-item>
