--- a/src/app/ceturb/transcol-online/destiny-list/destiny-list.component.scss
+++ b/src/app/ceturb/transcol-online/destiny-list/destiny-list.component.scss
@@ -1,5 +1,6 @@
 .destiny-list .destiny-list__reference {
 	font-size: 13px;
 	color: #707070;
-	margin: 5px 0 0 59px;
+	margin: 0;
+    line-height: 25px;
 }
