--- a/src/app/ceturb/transcol-online/prevision-list/prevision-list.component.scss
+++ b/src/app/ceturb/transcol-online/prevision-list/prevision-list.component.scss
@@ -1,26 +1,33 @@
-.prevision-list__main, 
-.prevision-list__secondary {
-	text-transform: capitalize;
-}
+.prevision-list {
+	md-list-item.md-2-line .md-list-item-text, 
+	md-list-item.md-2-line > .md-no-style .md-list-item-text {
+		margin-right: 45px;
+	}
+	.prevision-list__main, 
+	.prevision-list__secondary {
+		text-transform: capitalize;
+	}
 
-.prevision-list__secondary {
-	font-size: 12px;
-    color: #707070;
-    margin: 0 50px 0 0 !important;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
+	.prevision-list__secondary {
+		font-size: 12px;
+		color: #707070;
+		margin: 0;
+		line-height: 25px;
+		overflow: hidden;
+		text-overflow: ellipsis;
+		white-space: nowrap;
 
-}
+	}
 
-.prevision-list__time {
-	position: absolute; 
-	color: #b95b68; 
-	right: 10px; 
-	top: 30px;
-	text-transform: lowercase;
-}
+	.prevision-list__time {
+		position: absolute; 
+		color: #b95b68; 
+		right: 10px; 
+		top: 30px;
+		text-transform: lowercase;
+	}
 
-.fa-refresh {
-	cursor: pointer;
+	.fa-refresh {
+		cursor: pointer;
+	}
 }
