--- a/src/app/ceturb/transcol-online/transcol-online.component.html
+++ b/src/app/ceturb/transcol-online/transcol-online.component.html
@@ -1,52 +1,58 @@
 <ion-view>
     <ion-nav-title>Transcol Online </ion-nav-title>
+    <ion-nav-buttons side="right">
+        <md-button class="md-icon-button" ng-click="vm.searching = !vm.searching">
+            <md-icon md-font-icon="ion-search">
+            </md-icon>
+        </md-button>
+    </ion-nav-buttons>
     <div class="transcol-online">
-        <div class="stop-info" ng-class="{'stop-info--full-expanded': vm.showOriginDetails, 'stop-info--expanded': vm.showOriginSummary }">
+        <div class="stop-info" ng-class="{'stop-info--details': vm.showOriginDetails, 'stop-info--origin': vm.showOriginSummary, 'stop-info--route': vm.selectedOrigin && vm.selectedDestination }">
             <div class="stop-info__header">
-                <!--<md-button class="md-fab md-mini stop-info__btn-favorite">
-                    <i class="fa fa-star" aria-hidden="true"></i>
-                </md-button>-->
-                <md-button class="md-fab md-mini stop-info__btn-routes" ng-click="vm.togglePrevisions()">
+                <!--<md-button class="md-fab md-mini stop-info__btn-favorite"> <i class="fa fa-star" aria-hidden="true"></i> </md-button>-->
+                <md-button class="md-fab stop-info__btn-routes" ng-click="::vm.togglePrevisions()">
                     <i class="fa fa-clock-o" aria-hidden="true"></i>
                 </md-button>
-                <md-button class="md-fab md-mini stop-info__btn-destiny" ng-click="vm.toggleDestinies()">
-                    <i class="fa fa-code-fork" aria-hidden="true"></i>
+                <md-button class="md-fab stop-info__btn-destiny" ng-click="::vm.toggleDestinies()" ng-if="vm.selectedOrigin && !vm.selectedDestination">
+                    <i class="fa fa-map-signs" aria-hidden="true"></i>
                 </md-button>
-                <div>
-                    <h5 class="stop-info__icon">
-                        <i class="fa fa-bus" aria-hidden="true"></i>
-                    </h5>
-                    <h4 ng-if="!vm.selectedOrigin.isTerminal" class="stop-info__identifier">{{vm.selectedOrigin.identificador}}</h4>
+                <stop-summary stop="vm.selectedOrigin" on-stop-click="::vm.panToStop(stop)" ng-if="vm.selectedOrigin && !vm.selectedDestination"></stop-summary>
+                <div ng-if="vm.selectedOrigin && vm.selectedDestination" class="stop-info__route">
+                    <stop-summary stop="vm.selectedOrigin" on-stop-click="::vm.panToStop(stop)"></stop-summary>
+                    <hr>
+                    <stop-summary stop="vm.selectedDestination" on-stop-click="::vm.panToStop(stop)" class="destiny"></stop-summary>
                 </div>
-                <p ng-if="!vm.selectedOrigin.isTerminal" class="stop-info__address">
-                    {{vm.selectedOrigin.logradouro}}
-                    <span class="stop-info__city">{{vm.selectedOrigin.bairro}} - {{vm.selectedOrigin.municipio}}</span>
-                </p>
-                <p ng-if="vm.selectedOrigin.isTerminal" class="stop-info__address">
-                    {{vm.selectedOrigin.descricao}}
-                </p>
             </div>
-            <div class="stop-info__content" ng-class="{ destines: vm.showOriginDestinies, 'previsionsByOrigin': vm.showPrevisionsByOrigin, 'previsionsByLine': vm.selectedLine }">
-                <destiny-list on-swipe-left="vm.togglePrevisions()" destines="vm.destines"></destiny-list>
+            <div class="stop-info__content" ng-class="{ destinations: vm.showOriginDestinies, 'previsionsByOrigin': vm.showPrevisionsByOrigin, 'previsionsByLine': vm.selectedLine }">
+                <destiny-list 
+                    on-swipe-left="::vm.togglePrevisions()" 
+                    on-destiny-click="::vm.selectStop(destiny)" 
+                    destinations="vm.destinations">
+                </destiny-list>
                 <prevision-list 
-                    title="Previsões ({{vm.previsionsByOrigin.length}} linhas)"
-                    loading="uiState.loading"
-                    on-swipe-right="vm.toggleDestinies()" 
-                    on-prevision-click="vm.showLinePrevisions(prevision)" 
-                    on-refresh-click="vm.getOriginPrevisions(vm.selectedOrigin.id)"
+                    title="Previsões ({{vm.previsionsByOrigin.length}} linhas)" 
+                    loading="uiState.loading" 
+                    on-swipe-right="::vm.toggleDestinies()"
+                    on-prevision-click="::vm.showLinePrevisions(prevision)" 
+                    on-refresh-click="::vm.getOriginPrevisions(vm.selectedOrigin.id)"
                     previsions="vm.previsionsByOrigin">
                 </prevision-list>
-                <prevision-list
+                <prevision-list 
                     title="Previsões para a linha {{vm.selectedLine.identificadorLinha}}" 
-                    loading="uiState.loading"
-                    on-swipe-right="vm.togglePrevisions()"
-                    on-refresh-click="vm.getLinePrevisions(vm.selectedOrigin.id, vm.selectedLine.linhaId)"
+                    loading="uiState.loading" 
+                    on-swipe-right="::vm.togglePrevisions()"
+                    on-refresh-click="::vm.getLinePrevisions(vm.selectedOrigin.id, vm.selectedLine.linhaId)" 
                     previsions="vm.previsionsByLine">
                 </prevision-list>
             </div>
         </div>
-        <ion-content>
-            <div id="map"></div>
-        </ion-content>
+        <search-bar ng-if="!vm.selectedOrigin" placeholder="Pesquisar ponto de origem" icon="fa-bus" on-change="::vm.searchAll(text)" on-clear="::vm.clearSearchResults()"></search-bar>
+        <search-bar ng-if="vm.selectedOrigin" placeholder="Pesquisar ponto de destino" icon="fa-bus" on-change="::vm.searchPossibleDestinations(text)" on-clear="::vm.clearSearchResults()"></search-bar>
+            <ion-content>
+                <div id="map"></div>
+                <div class="auto-complete-panel" ng-if="vm.searchResults.length">
+                    <destiny-list destinations="::vm.searchResults" on-destiny-click="::vm.selectStop(destiny)"></destiny-list>
+                </div>
+            </ion-content>
     </div>
 </ion-view>
