--- a/src/app/ceturb/transcol-online/transcol-online.component.scss
+++ b/src/app/ceturb/transcol-online/transcol-online.component.scss
@@ -151,38 +151,51 @@
 	//     100% {-webkit-transform: scale(1.2, 1.2); opacity: 0.0;}
 	// }
 /********************** Bus Stop Info **********************/
+
+	stop-summary { cursor: pointer; }
+	
 	$bottomSheetHeight: 100vh;
 
-	.stop-info {
+	.stop-info, 
+	.keyboard-open .stop-info--route,
+	.keyboard-open .stop-info--origin,
+	.keyboard-open .stop-info--details
+	{
 		width: 100%;
-		outline: 10px solid #dcd9c5;
+		// outline: 10px solid #dcd9c5;
 		height: 100vh;
 		z-index: 999;
 		transform: translate3d(0px, 110vh, 0px);
 		background: white;
 		position: absolute;
 		bottom: 0px;
-		padding: 18px 15px 15px 10px;
+		padding: 35px 15px 15px 10px;
 		display: flex;
 		flex-direction: column;
-	-webkit-transition: all 300ms cubic-bezier(0.420, 0.000, 0.000, 0.990); 
-	-moz-transition: all 300ms cubic-bezier(0.420, 0.000, 0.000, 0.990); 
+		-webkit-transition: all 300ms cubic-bezier(0.420, 0.000, 0.000, 0.990); 
+		-moz-transition: all 300ms cubic-bezier(0.420, 0.000, 0.000, 0.990); 
 		-o-transition: all 300ms cubic-bezier(0.420, 0.000, 0.000, 0.990); 
-			transition: all 300ms cubic-bezier(0.420, 0.000, 0.000, 0.990); /* custom */
+		transition: all 300ms cubic-bezier(0.420, 0.000, 0.000, 0.990); /* custom */
+		-webkit-box-shadow: 0px -2px 5px -1px rgba(0,0,0,0.49);
+		-moz-box-shadow: 0px -2px 5px -1px rgba(0,0,0,0.49);
+		box-shadow: 0px -2px 5px -1px rgba(0,0,0,0.49);
 	}
 
-	.stop-info--expanded {
-		transform: translate3d(0, calc( 100vh - 100px), 0)
+	.stop-info--origin {
+		transform: translate3d(0, calc( 100vh - 98px), 0)
 	}
-	.stop-info--full-expanded {
+	
+	.stop-info--route {
+		transform: translate3d(0, calc( 100vh - 165px), 0)
+	}
+
+	.stop-info--details {
 		transform: translate3d(0, $bottomSheetHeight * 0.20, 0)
-	}
-	.stop-info * {
-		margin: 0;
 	}
 
 	.stop-info__header, .stop-info__content {
 		display: flex;
+		// justify-content: center;
 		position: relative;
 	}
 	
@@ -219,36 +232,15 @@
 		height: 65vh;
 	}
 
-	.stop-info__icon {
-		font-size: 30px;
-		text-align: center;
-		color: darkgoldenrod;
-	}
-	.stop-info__identifier {
-		margin: 5px 0 0 0;
-		font-weight: 600;
-		color: darkgoldenrod;
-	}
-	.stop-info__address {
-		flex: 1;
-		padding: 0 20px 0 10px;
-		font-size: 14px;
-	}
-	.stop-info__city {
-		display: block;
-		font-size: 12px;
-		color: #7d7d7d;
-		border-top: 1px solid #d6d5d5;
-		padding-top: 5px;
-		margin-top: 5px;
-	}
 
 	.md-fab{
-		font-size: 1.2em;
+		font-size: 1.7em;
 		position: absolute;
-		top: -44px;
+		// top: -44px;
+		top: -65px;
 		color: #fff !important;
 		background-color: #003e50 !important;
+		margin: 0;
 	}
 	.stop-info__btn-favorite{
 		// right: 0%;
@@ -261,8 +253,42 @@
 
 	.stop-info__btn-destiny{
 		 // right: 28%;
-		 right: 14%
+		 right: 19%
 	}
 
 	.leaflet-control-attribution { display: none;}
+
+
+
+	.auto-complete-panel{
+		background-color: white;
+		margin-top: 4px;
+		box-shadow: 0 3px 8px 0 rgba( 0, 0, 0, 0.2 );
+		height: 60vh;
+		overflow-y: scroll;
+		overflow-x: hidden;
+		width: 96%;
+		margin: auto;
+		position: absolute;
+		top: 42px;
+		left: 2%;
+		z-index: 99999;
+	}
+
+
+	.stop-info__route {
+		display: flex;
+		justify-content: center;
+		flex-direction: column;
+		width: 100%;
+	
+		hr {
+			border: 1px dotted #dcd9c5;
+			margin: 10px 0;
+		}
+
+		.stop-info__city {
+			border-top: none;
+		}
+	}
 }
