feat(transcol-online): adiciona estimativas pra rotas

--- a/src/app/ceturb/transcol-online/destiny-list/destiny-list.component.scss
+++ b/src/app/ceturb/transcol-online/destiny-list/destiny-list.component.scss
@@ -1,4 +1,4 @@
-.destiny-list .destiny-list__reference {
+.destination-list .destination-list__reference {
 	font-size: 13px;
 	color: #707070;
 	margin: 0;
