--- a/src/app/ceturb/transcol-online/stop-summary/stop-summary.component.html
+++ b/src/app/ceturb/transcol-online/stop-summary/stop-summary.component.html
@@ -1,3 +1,4 @@
+
 <div class="stop-info__summary" ng-click="$ctrl.onStopClick({ stop:$ctrl.stop })">
     <stop-icon stop="$ctrl.stop"></stop-icon>
     <p ng-if="!$ctrl.stop.isTerminal" class="stop-info__address">
@@ -8,3 +9,6 @@
         {{$ctrl.stop.descricao}}
     </p>
 </div>
+<md-icon  ng-click="$ctrl.onCloseClick()">
+    <i class="ion-android-close"></i>
+</md-icon>
