--- a/src/app/ceturb/transcol-online/stop-summary/stop-summary.component.scss
+++ b/src/app/ceturb/transcol-online/stop-summary/stop-summary.component.scss
@@ -1,3 +1,16 @@
+stop-summary{
+	display: block;
+	width: 100%;
+	position: relative;
+	
+	md-icon {
+		position: absolute;
+		top: 11px;
+		right: -7px;
+		text-align: center;
+	}
+}
+
 .stop-info__summary {
 		display: flex;
 
@@ -18,6 +31,8 @@
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
+		// justify-content: center;
+    	// display: flex;
 	}
 	.stop-info__city {
 		display: block;
