--- a/src/app/ceturb/transcol-online/prevision-list/prevision-list.component.html
+++ b/src/app/ceturb/transcol-online/prevision-list/prevision-list.component.html
@@ -7,7 +7,7 @@
         <md-list-item class="md-2-line" collection-repeat="prevision in $ctrl.previsions" item-height="70" md-no-ink ng-click="$ctrl.onPrevisionClick({ prevision: prevision })">
             <div class="md-list-item-text">
                 <h4 class="text-padding prevision-list__main"><strong>{{ prevision.identificadorLinha }}</strong> - {{ prevision.bandeira }} 
-                    <i class="prevision-list__time"> {{ prevision.previsao }}</i>
+                    <i class="prevision-list__time"> {{ prevision.previsaoNaOrigem }}</i>
                 </h4>
                 <div class="prevision-list__secondary">{{ prevision.descricaoLinha }}</div>
             </div>
