--- a/src/app/ceturb/transcol-online/transcol-online.component.scss
+++ b/src/app/ceturb/transcol-online/transcol-online.component.scss
@@ -151,10 +151,18 @@
 	//     100% {-webkit-transform: scale(1.2, 1.2); opacity: 0.0;}
 	// }
 /********************** Bus Stop Info **********************/
+	.origin { color: darkgoldenrod; }
+	.destination{ color: #003e50; }
 
 	stop-summary { cursor: pointer; }
-	
+
 	$bottomSheetHeight: 100vh;
+
+	destiny-list,
+	prevision-list { visibility: hidden; }
+	destiny-list.shown,
+	prevision-list.shown,
+	.auto-complete-panel > * { visibility: visible !important; }
 
 	.stop-info, 
 	.keyboard-open .stop-info--route,
@@ -173,7 +181,7 @@
 		display: flex;
 		flex-direction: column;
 		-webkit-transition: all 300ms cubic-bezier(0.420, 0.000, 0.000, 0.990); 
-		-moz-transition: all 300ms cubic-bezier(0.420, 0.000, 0.000, 0.990); 
+		-moz-transition: all 3000ms cubic-bezier(0.420, 0.000, 0.000, 0.990); 
 		-o-transition: all 300ms cubic-bezier(0.420, 0.000, 0.000, 0.990); 
 		transition: all 300ms cubic-bezier(0.420, 0.000, 0.000, 0.990); /* custom */
 		-webkit-box-shadow: 0px -2px 5px -1px rgba(0,0,0,0.49);
@@ -186,7 +194,7 @@
 	}
 	
 	.stop-info--route {
-		transform: translate3d(0, calc( 100vh - 165px), 0)
+		transform: translate3d(0, calc( 100vh - 155px), 0)
 	}
 
 	.stop-info--details {
@@ -207,7 +215,7 @@
 		-moz-transition: all 300ms cubic-bezier(0.420, 0.000, 0.000, 0.990); 
 		-o-transition: all 300ms cubic-bezier(0.420, 0.000, 0.000, 0.990); 
 		transition: all 300ms cubic-bezier(0.420, 0.000, 0.000, 0.990); /* custom */
-		width: calc(100vw * 3);
+		width: calc(100vw * 4);
 	}
 
 	.stop-info__content.destines{
@@ -220,6 +228,10 @@
 
 	.stop-info__content.previsionsByLine{
 		transform: translate3d(-200vw, 0, 0)
+	}
+
+	.stop-info__content.previsionsByRoute{
+		transform: translate3d(-300vw, 0, 0)
 	}
 
 	.stop-info__content > * {
