--- a/src/app/sep/sep-consulta.component.scss
+++ b/src/app/sep/sep-consulta.component.scss
@@ -67,8 +67,7 @@
     background-color: white;
     margin-top: 4px;
     box-shadow: 0 3px 8px 0 rgba( 0, 0, 0, 0.2 );
-    height: 78%;
-    max-height: 205px;
+    max-height: 78%;
     overflow-y: scroll;
     overflow-x: hidden;
     width: 96%;
